src/test/resources/invalid/typecheck/Print_OneVarNotFound.vas
class Main is
    this() is
        var var1 : Boolean = false
        println("var1 = $var1, var2 = $var2")
    end
end